--- a/reviewportal/review.html
+++ b/reviewportal/review.html
@@ -3,14 +3,15 @@
 <head>
     <!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
     <title>Reivew Status</title>
-    <script src="Scripts/1.10.3/jquery-1.8.2.js"></script>
+    <script src="Scripts/1.10.3/jquery-1.8.2.min.js"></script>
     <script src="Scripts/columns/mustache.min.js"></script>
-    <script src="Scripts/columns/jquery.columns.js"></script>
+    <script src="Scripts/columns/jquery.columns.min.js"></script>
     <link rel="stylesheet" href="CSS/clean.css">
     <script>
         $(document).ready(function () {
             $.ajax({
                 url: "http://reviewportal.apphb.com/api/review/" + new Date().toDateString(),
+                //url: "http://localhost:57047/api/review/" + new Date().toDateString(),
                 dataType: "json",
                 success: function (json) {
                     rvGrid = $('#rvGrid').columns({
